fix on mobile

--- a/assets/css/portfolio.css
+++ b/assets/css/portfolio.css
@@ -1,16 +1,18 @@
-img {
-    width: 100%;
+.grid-item {
+  margin-bottom: 100px;
+  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+  transition: all 0.3s cubic-bezier(.25,.8,.25,1);
 }
+
+img {
+  width: 100%;
+}
+
+/*
 
 h2 {
   font-size: 30px;
   padding: 20px 0px 60px;
-}
-
-.grid-item {
-    margin-bottom: 100px;
-    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
-    transition: all 0.3s cubic-bezier(.25,.8,.25,1);
 }
 
 @media only screen and (max-width: 480px) {
@@ -70,3 +72,4 @@ h2 {
     width: 1000px;
   }
 }
+ */
