--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,18 +1,23 @@
 body {
   font-family: 'Open Sans Condensed', sans-serif;
-  margin: 0px;
-  display: flex;
   letter-spacing: 1.5px;
   max-width: 1200px;
-  margin: auto;
   line-height: 1.5em;
 }
 
 nav {
-  font-size: 32px;
-  padding: 30px;
+  font-size: 25px;
+  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+  transition: all 0.3s cubic-bezier(.25,.8,.25,1);
   position: fixed;
-  z-index: 99;
+  background: white;
+  width: 100%;
+  z-index: 100;
+}
+
+ul {
+  display: flex;
+  justify-content: space-around;
 }
 
 a:link {
@@ -39,6 +44,10 @@ li {
   padding: 12px 0px;
 }
 
+.information {
+  padding: 90px 20px 40px;
+}
+
 h1 {
   font-size: 42px;
   padding-top: 10px;
@@ -63,16 +72,11 @@ p {
 }
 
 img {
-  width: 300px;
+  width: 280px;
 }
 
 i {
   color: #2b2b2b;
-}
-
-.information {
-  padding: 40px 30px 15px 160px;
-  display: block;
 }
 
 .font-size {
@@ -96,7 +100,7 @@ i {
 }
 
 .container {
-  width: 400px;
+  width: 100%;
 }
 
 .grid-item {
@@ -182,7 +186,7 @@ i {
 .about-p {
   padding-bottom: 20px;
 }
-
+/* 
 @media only screen and (max-width: 480px) {
   nav {
    width: 100%;
@@ -229,10 +233,10 @@ i {
    margin-bottom: 40px;
  }
 
- /* .placeholder {
+ .placeholder {
   display: none;
-  } */
-};
+  }
+}; */
 
 /* @media only screen and (max-width: 769) {
   .placeholder {
